mod: added dark mode button to nav, styled, media query and js script, Fix: few position fixes with nav

--- a/assets/css/media_queries.css
+++ b/assets/css/media_queries.css
@@ -10,6 +10,12 @@
     .navbar-light .navbar-nav .nav-link {
         font-size: 30px;
         letter-spacing: 10px;
+        line-height: 34px;
+    }
+
+    #dark-btn {
+        font-size: 18px;
+        line-height: normal;
     }
 
 }
@@ -26,6 +32,11 @@
     .navbar-light .navbar-nav .nav-link {
         font-size: 16px;
         letter-spacing: 5px;
+        line-height: 18px;
+    }
+
+    #dark-btn {
+        line-height: normal;
     }
 
 }
@@ -35,12 +46,21 @@
 
     /*Nav Bar*/
     .navbar-light .navbar-brand {
-        font-size: 24px;
+        font-size: 20px;
         letter-spacing: 10px;
     }
 
     .navbar-light .navbar-nav .nav-link {
         font-size: 14px;
+        line-height: 16px;
+    }
+
+    #dark-btn {
+        line-height: normal;
+    }
+
+    .nav-link {
+        margin-left: 5px;
     }
 
 }
@@ -80,6 +100,10 @@
         font-size: 18px;
         letter-spacing: 5px;
     }
+
+    #dark-btn {
+        font-size: 12px;
+    }
 }
 
 /*Large Mobile*/
@@ -87,7 +111,8 @@
 
     /*Nav Bar*/
     .navbar-light .navbar-brand {
-        font-size: 23px;
+        font-size: 22px;
+        margin-right: 0px;
         letter-spacing: 2px
     }
 
